agw/k8s/agw-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: agw
  labels:
    app-service: agw
spec:
  selector:
    matchLabels:
      app-service: agw
  replicas: 1
  template:
    metadata:
      labels:
        app-service: agw
    spec:
      containers:
        - name: agw
          image: msagw-agw
          imagePullPolicy: Never
          ports:
            - name: http
              containerPort: 9000
              protocol: TCP
