agw/k8s/agw-hazelcast-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: agv-hazelcast
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app-service: agw
  ports:
    - name: hazelcast
      port: 5701
