agw/k8s/agw-svc.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: default
  labels:
    app-service: agw
  name: agw
spec:
  type: ClusterIP
  selector:
    app-service: agw
  ports:
    - name: http
      port: 9000
      targetPort: 9000
      protocol: TCP
