agw/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: agw
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: k8s.test
      http:
        paths:
          - path: /
            backend:
              serviceName: agw
              servicePort: 9000
